--- a/intro.qmd
+++ b/intro.qmd
@@ -4,10 +4,10 @@ En términos generales el contenido de una MIA de orden federal debe
 apegarse a lo especificado en el Reglamento de la LEGEPA en materia de
 Evaluación del Impacto Ambiental [@semarnat2014]. Ahí se especifica que
 pueden ser sólo de dos tipos: regionales o particulares. La que haremos
-como ensayo seguirá en términos generales el maro de un estudio
+como ensayo seguirá en términos generales el marco de un estudio *MIA*
 particular. Si se requiriera un poco más de especificidad recurriremos a
-la guía de una MIA Particular - Sector Turistico [@semarnat]. Con base
-en este marco normativo los capítulos que habrá que desarollar a lo
+la guía de una MIA Particular - [Sector Turístico](https://www.gob.mx/cms/uploads/attachment/file/121010/Guia_MIA-Particular_Turistico.pdf) [@semarnat]. Con base
+en este marco normativo los capítulos que habrá que desarrollar a lo
 largo de los ejercicios propuestos son los siguientes.
 
 1.  Datos generales del proyecto, del promovente y del responsable del
