--- a/referencias.bib
+++ b/referencias.bib
@@ -4,7 +4,7 @@
 	author = {SEMARNAT, },
 	year = {2022},
 	date = {2022},
-	  url = {https://www.gob.mx/cms/uploads/attachment/file/121010/Guia_MIA-Particular_Turistico.pdf},
+	url = {https://www.gob.mx/cms/uploads/attachment/file/121010/Guia_MIA-Particular_Turistico.pdf},
 	langid = {es}
 }
 
@@ -13,6 +13,7 @@
 	author = {SEMARNAT, },
 	year = {2014},
 	date = {2014},
+	url = {https://www.diputados.gob.mx/LeyesBiblio/regley/Reg_LGEEPA_MEIA_311014.pdf},
 	langid = {es}
 }
 
