--- a/git-basico.qmd
+++ b/git-basico.qmd
@@ -1,6 +1,6 @@
 # Git: lo básico
 
-## Guardar el trabajo con la intención de colaborar
+## Huellas de tu trabajo: control de versiones
 
 Ahora ya tenemos el texto en nuestras máquinas, almacenado en casa. ¿Podemos hacer algo más para asegurar esos materiales y facilitar compartirlos con quienes queramos? Te sugiero considerar **git** y **github** para eso. Podemos imaginar que el espacio de almacenamiento en tu máquina es como una parcela de siembra, cada dato tiene coordenadas de localización y así los recuperas cuando los quieres. Lo que hace *git* es agregar una *ventana de tiempo* que te permite asomarte a la historia de lo que pasó en esas ubicaciones que te interesan.
 
