--- a/index.qmd
+++ b/index.qmd
@@ -13,8 +13,7 @@ Los ejercicio prácticos permitirán al lector hacer un recorrido a lo largo de 
 3.  Introducción al uso del *lenguaje R* como base de construcción de algoritmos computacionales para análisis de datos.
 4.  Uso de *R* para el procesamiento de datos geoespaciales, análisis de cartografía y producción de mapas.
 
-Con base en estos elementos desarrollaremos, paso a paso, los componentes necesarios para integrar, a manera de ejemplo, un documento tipo *Manifiesto de Impacto Ambiental* (**MIA**). Lo haremos con un apego genérico a lo que se suele hacer en [México en el orden federal](https://www.gob.mx/semarnat/documentos/guias-de-impacto-ambiental), pero la experiencia es fácilmente extrapolable a la práctica de cualquier otro nivel administrativo e incluso cualquier país del mundo.
-
+Con base en estos elementos desarrollaremos, paso a paso, los componentes necesarios para integrar, a manera de ejemplo, un documento tipo *Manifiesto de Impacto Ambiental* (**MIA**). Lo haremos con un apego genérico a lo que se suele hacer en [México en el orden federal](https://www.gob.mx/semarnat/documentos/guias-de-impacto-ambiental), pero la experiencia es fácilmente extrapolable a la práctica de cualquier otro nivel administrativo e incluso cualquier país del mundo. Incluso para el desarrollo de otros documentos considerados dentro de la política pública como ordenamientos, planes de manejo, etc.    
 
 ## Ciencia reproducible y abierta
 
