--- a/referencias.bib
+++ b/referencias.bib
@@ -17,3 +17,11 @@
 	langid = {es}
 }
 
+@misc{turner2025,
+	title = {Writing a book with Quarto},
+	author = {Turner, Stephen},
+	year = {2025},
+	month = {05},
+	date = {2025-05-19},
+	url = {http://dx.doi.org/10.59350/9qj3c-7t040}
+}
