--- a/index.qmd
+++ b/index.qmd
@@ -1,58 +1,56 @@
-
 # Prefacio {.unnumbered}
 
 ## Herramientas que usaremos
 
-En este libro desarrollamos el contenido propuesto para un *curso/taller* de ciencia reproducible, basado en el uso de [Quarto](https://quarto.org/docs/books) y el *lenguaje R*.  
+En este libro desarrollamos el contenido propuesto para un
+*curso/taller* de ciencia reproducible, basado en el uso de
+[Quarto](https://quarto.org/docs/books) y el *lenguaje R*.
 
-La intención es desarrollar una experiencia inmersiva sobre la incorporación de datos y el apoyo de evidencia en la construcción de instrumentos relevantes para la política pública en materia ambiental. Buscamos ofrecer al lector ejercicios con los que poner a prueba el uso de herramientas que propician el desarrollo de un enfoque científico reproducible.  
+La intención es desarrollar una experiencia inmersiva sobre la
+incorporación de datos y el apoyo de evidencia en la construcción de
+instrumentos relevantes para la política pública en materia ambiental.
+Buscamos ofrecer al lector ejercicios con los que poner a prueba el uso
+de herramientas que propician el desarrollo de un enfoque científico
+reproducible.
 
-Los ejercicio prácticos permitirán al lector hacer un recorrido a lo largo de la siguiente ruta:
+Los ejercicio prácticos permitirán al lector hacer un recorrido a lo
+largo de la siguiente ruta:
 
-1.  Uso de *Quarto*. Lo proponemos como base de encuentro de la producción de contenido en texto, análisis computacional y gráficos de datos, en un sólo espacio.
-2.  Uso de *Git*, [Github](http://www.github.com) y [Netlify](http://www.netlify.com). Se trata de recursos convenientes para el control del proceso de desarrollo de contenidos y para la publicación en línea.
-3.  Introducción al uso del *lenguaje R* como base de construcción de algoritmos computacionales para análisis de datos.
-4.  Uso de *R* para el procesamiento de datos geoespaciales, análisis de cartografía y producción de mapas.
+{{< include _reusables/contenido.qmd >}}
 
-Con base en estos elementos desarrollaremos, paso a paso, los componentes necesarios para integrar, a manera de ejemplo, un documento tipo *Manifiesto de Impacto Ambiental* (**MIA**). Lo haremos con un apego genérico a lo que se suele hacer en [México en el orden federal](https://www.gob.mx/semarnat/documentos/guias-de-impacto-ambiental), pero la experiencia es fácilmente extrapolable a la práctica de cualquier otro nivel administrativo e incluso cualquier país del mundo. Incluso para el desarrollo de otros documentos considerados dentro de la política pública como ordenamientos, planes de manejo, etc.    
+Con base en estos elementos desarrollaremos, paso a paso, los
+componentes necesarios para integrar, a manera de ejemplo, un documento
+tipo *Manifiesto de Impacto Ambiental* (**MIA**). Lo haremos con un
+apego genérico a lo que se suele hacer en [México en el orden
+federal](https://www.gob.mx/semarnat/documentos/guias-de-impacto-ambiental),
+pero la experiencia es fácilmente extrapolable a la práctica de
+cualquier otro nivel administrativo e incluso cualquier país del mundo.
+Incluso para el desarrollo de otros documentos considerados dentro de la
+política pública como ordenamientos, planes de manejo, etc.
 
 ## Ciencia reproducible y abierta
 
-En el movimiento social que nos invita a reflexionar sobre la *ciencia abierta*, hay quienes sostenemos que el conocimiento y el proceso creativo que lo impulsa debe ser lo más libre posible. El talento y la sabiduría su núcleo. Sobre todo en áreas como la salud y la calidad del entorno ecológico en el que vivimos. La ciencia abierta también nos plantea la necesidad de cuidar la confiabilidad de la información, pues una *buena ciencia exige buenos datos*. Otro aspecto importante, además de las evidencias, es la forma como los analizamos. Lo usual es confiar en sus propiedades estadísticas para llegar a conclusiones, así que los algoritmos y procedimientos numéricos empleados son otro componente que debe ser transparente y accesible al público en forma abierta. 
+En el movimiento social que nos invita a reflexionar sobre la *ciencia
+abierta*, hay quienes sostenemos que el conocimiento y el proceso
+creativo que lo impulsa debe ser lo más libre posible. El talento y la
+sabiduría su núcleo. Sobre todo en áreas como la salud y la calidad del
+entorno ecológico en el que vivimos. La ciencia abierta también nos
+plantea la necesidad de cuidar la confiabilidad de la información, pues
+una *buena ciencia exige buenos datos*. Otro aspecto importante, además
+de las evidencias, es la forma como los analizamos. Lo usual es confiar
+en sus propiedades estadísticas para llegar a conclusiones, así que los
+algoritmos y procedimientos numéricos empleados son otro componente que
+debe ser transparente y accesible al público en forma abierta.
 
-La meticulosidad y apertura con la que abordemops estos asuntos tiene un impacto definitivo sobre la posibilidad de que otras personas puedan llegar a similares conclusiones que las nuestras, lo que abona a la noción de *objetividad científica*, y es una de las razones que nos lleva a confiar en la ciencia al tomar decisiones.
-
+La meticulosidad y apertura con la que abordemops estos asuntos tiene un
+impacto definitivo sobre la posibilidad de que otras personas puedan
+llegar a similares conclusiones que las nuestras, lo que abona a la
+noción de *objetividad científica*, y es una de las razones que nos
+lleva a confiar en la ciencia al tomar decisiones.
 
 ## Habilidades
 
-A lo largo del libro buscaremos ayudar al lector a que desarrolle  habilidades como las siguientes:
+A lo largo del libro buscaremos ayudar al lector a que desarrolle
+habilidades como las siguientes:
 
-1. Estructurar mis documentos considerando la perspectiva de narrativa de datos.
-1. Defender mi propia opinión en relación con la crisis de la reproducibilidad.
-1. Crear un proyecto en RStudio que tenga a Quarto habilitado.
-1. Utilizar un blog como una bitácora de control de mi proyecto académico, que puedo compartir.
-1. Habilitar y manejar comentarios mediante http://hypothes.is/.
-1. Distinguir, buscar y utilizar apropiadamente datos abiertos y de acceso abierto.
-1. Organizar mi trabajo para producir y reportar resultados reproducibles.
-1. Generar reportes que compartan los datos y los algoritmos que usé para producirlo, con un ánimo de ciencia abierta.
-1. Cuidar de utilizar y defender valores de ciencia abierta en mi trabajo profesional.
-1. Escribir mi texto con Markdown usando marcas de formato, ligas e ilustraciones.
-1. Distinguir y manejar apropiadamente la sección de encabezado YAML de un documento (controlando las opciones y metadatos) y el resto del texto desarrollado con Markdown.
-1. Editar apropiadamente los distintos tipos de archivos de mi proyecto (yaml, qmd, posts, etc).
-1. Habilitar git en RStudio
-1. Vincular mi proyecto con un "almacén" en la nube con Github.
-1. Publicar continuamente mis documentos en la Web con ayuda de Netlify
-1. Operar rutinariamente en RStudio con respaldo en Git: *commit-pull-push*.
-1. Incluir en mi texto "trozos" de código (lectura de datos, análisis, graficación).
-1. Usar referencias cruzadas en mi texto (figuras, cuadros, definiciones, etc.).
-1. Anotar en mi texto citas bibliográficas e incluir la lista de literatura automáticamente.
-1. Utilizar Markdown para producir textos en formato MS-Word o PDF como "artículo científico".
-1. Producir documentos para "presentación web" con Reveal.JS.
-1. Crear nuevas ramas para trabajar sin afectar la línea de producción de mi proyecto.
-1. Recuperar estados previos de mi espacio de trabajo desde git.
-1. Reunir una rama de git con la principal de producción.
-1. Operar un "pull request" como medio de colaboración con respaldo en Github.
-
-
-
-
+{{< include _reusables/habilidades.qmd >}}
